@@ -147,8 +147,10 @@ static int test_cycle(unsigned char *orig_image, int width, int height,
   size_t plane_size, buffer_len;
   int i, result;
   unsigned char *image, *buffer;
+  size_t bpl;
 
-  plane_size = ((width + 7) / 8) * height;
+  bpl = (width + 7) / 8;
+  plane_size = bpl * height;
   image = (unsigned char *) checkedmalloc(plane_size);
   memcpy(image, orig_image, plane_size);
   
@@ -157,7 +159,10 @@ static int test_cycle(unsigned char *orig_image, int width, int height,
   jbg85_enc_init(&sje, width, height, testbuf_writel, NULL);
   jbg85_enc_options(&sje, options, l0, mx);
   for (i = 0; i < height; i++)
-    jbg85_enc_lineout(&sje, image + i * ((width + 7) / 8));
+    jbg85_enc_lineout(&sje,
+		      image + i * bpl,
+		      image + (i-1) * bpl,
+		      image + (i-2) * bpl);
   free(image);
   printf("Encoded BIE has %6ld bytes: ", testbuf_len);
   if (correct_length >= 0)
@@ -240,10 +245,7 @@ int main(int argc, char **argv)
   struct jbg_ardec_state *sd;
   long i;
   int pix;
-  char test[10];
-  size_t st;
   unsigned char *pp;
-  unsigned char *ppp[4];
 
   int t82pix[16] = {
     0x05e0, 0x0000, 0x8b00, 0x01c4, 0x1700, 0x0034, 0x7fff, 0x1a3f,
@@ -258,42 +260,6 @@ int main(int argc, char **argv)
     0xd5, 0xff, 0x00, 0x52, 0x7f, 0xff, 0x00, 0xff,
     0x00, 0xff, 0x00, 0xc0, 0x00, 0x00, 0x00, 0x3f,
     0xff, 0x00, 0x2d, 0x20, 0x82, 0x91, 0xff, 0x02
-  };
-
-  /* three 23x5 pixel test images with the letters JBIG */
-  unsigned char jbig_normal[15*4] = {
-    0x7c, 0xe2, 0x38, 0x04, 0x92, 0x40, 0x04, 0xe2, 0x5c, 0x44,
-    0x92, 0x44, 0x38, 0xe2, 0x38,
-    0x7c, 0xe2, 0x38, 0x04, 0x92, 0x40, 0x04, 0xe2, 0x5c, 0x44,
-    0x92, 0x44, 0x38, 0xe2, 0x38,
-    0x7c, 0xe2, 0x38, 0x04, 0x92, 0x40, 0x04, 0xe2, 0x5c, 0x44,
-    0x92, 0x44, 0x38, 0xe2, 0x38,
-    0x7c, 0xe2, 0x38, 0x04, 0x92, 0x40, 0x04, 0xe2, 0x5c, 0x44,
-    0x92, 0x44, 0x38, 0xe2, 0x38
-  };
-  unsigned char jbig_upsidedown[15*4] = {
-    0x38, 0xe2, 0x38, 0x44, 0x92, 0x44, 0x04, 0xe2, 0x5c, 0x04,
-    0x92, 0x40, 0x7c, 0xe2, 0x38,
-    0x38, 0xe2, 0x38, 0x44, 0x92, 0x44, 0x04, 0xe2, 0x5c, 0x04,
-    0x92, 0x40, 0x7c, 0xe2, 0x38,
-    0x38, 0xe2, 0x38, 0x44, 0x92, 0x44, 0x04, 0xe2, 0x5c, 0x04,
-    0x92, 0x40, 0x7c, 0xe2, 0x38,
-    0x38, 0xe2, 0x38, 0x44, 0x92, 0x44, 0x04, 0xe2, 0x5c, 0x04,
-    0x92, 0x40, 0x7c, 0xe2, 0x38
-  };
-  unsigned char jbig_inverse[15*4] = {
-    0xff^0x7c, 0xff^0xe2, 0xfe^0x38, 0xff^0x04, 0xff^0x92,
-    0xfe^0x40, 0xff^0x04, 0xff^0xe2, 0xfe^0x5c, 0xff^0x44,
-    0xff^0x92, 0xfe^0x44, 0xff^0x38, 0xff^0xe2, 0xfe^0x38,
-    0xff^0x7c, 0xff^0xe2, 0xfe^0x38, 0xff^0x04, 0xff^0x92,
-    0xfe^0x40, 0xff^0x04, 0xff^0xe2, 0xfe^0x5c, 0xff^0x44,
-    0xff^0x92, 0xfe^0x44, 0xff^0x38, 0xff^0xe2, 0xfe^0x38,
-    0xff^0x7c, 0xff^0xe2, 0xfe^0x38, 0xff^0x04, 0xff^0x92,
-    0xfe^0x40, 0xff^0x04, 0xff^0xe2, 0xfe^0x5c, 0xff^0x44,
-    0xff^0x92, 0xfe^0x44, 0xff^0x38, 0xff^0xe2, 0xfe^0x38,
-    0xff^0x7c, 0xff^0xe2, 0xfe^0x38, 0xff^0x04, 0xff^0x92,
-    0xfe^0x40, 0xff^0x04, 0xff^0xe2, 0xfe^0x5c, 0xff^0x44,
-    0xff^0x92, 0xfe^0x44, 0xff^0x38, 0xff^0xe2, 0xfe^0x38
   };
 
   printf("\nAutomatic JBIG Compatibility Test Suite\n"
@@ -434,13 +400,13 @@ int main(int argc, char **argv)
   putchar('\n');
 
   puts("Test 3.1: TPBON=0, Mx=0, LRLTWO=0, L0=1951, 0 layers");
-  problems += test_cycle(testpic, 1960, 1951, JBG_DELAY_AT,
+  problems += test_cycle(testpic, 1960, 1951, 0,
 			 1951, 0, 317384L, "3.1");
   puts("Test 3.2: TPBON=0, Mx=0, LRLTWO=1, L0=1951, 0 layers");
-  problems += test_cycle(testpic, 1960, 1951, JBG_DELAY_AT | JBG_LRLTWO,
+  problems += test_cycle(testpic, 1960, 1951, JBG_LRLTWO,
 			 1951, 0, 317132L, "3.2");
   puts("Test 3.3: TPBON=1, Mx=8, LRLTWO=0, L0=128, 0 layers");
-  problems += test_cycle(testpic, 1960, 1951, JBG_DELAY_AT | JBG_TPBON,
+  problems += test_cycle(testpic, 1960, 1951, JBG_TPBON,
 			 128, 8, 253653L, "3.3");
 #endif
 
