@@ -22,6 +22,10 @@ Changes in version 1.7 (yet to be released)
 
   - arithmetic codec routines in separate source file
 
+  - pbmtojbg has new option -f as a shortcut for all the options
+    needed to make the output comply to the basic ITU-T T.85 fax
+    profile
+
 Changes in version 1.6 (2004-06-11)
 
   - various small changes to reduce the risk of 32-bit unsigned
